# robotic-gripper

./: .gitattributes  .gitignore  README.md
Gripper adapters/UR3/: UR3_adapter.stl
Gripper/BOM/: GripperBOM.xlsx
PCB/STLs/: PCB_spacer.stl
gripper-adapters/UR3/: UR3_adapter.stl
pcb/BOM/: PCB_BOM.xlsx
pcb/STLs/: PCB_spacer.stl
software/Python_scripts/: gripper_rosserial.py  gripper_serial.py
software/arduino/: arduino.ino  program.sh
software/serial/: .clangd  CMakeLists.txt  package.xml
software/serial/src/: main.cpp
